<resources>
    <string name="app_name">ThreeMate</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_0_kcal" translatable="false">0 kcal</string>
    <string name="KCAL_SUM">"Total Calories "</string>
    <string name="btnNext" translatable="false">▶</string>
    <string name="btn_previous" translatable="false">◀</string>
    <string name="date" translatable="false">date</string>
    <string name="foodName">Food Name</string>
    <string name="KCal">열량</string>
    <string name="Tan">Carbohydrate (g)</string>
    <string name="Dan">Protein (g)</string>
    <string name="Ji">Fat (g)</string>
    <string name="MOA">Intake List</string>


    <!-- Ted Permission -->
    <string name="permission_1">You can grant permissions in [Settings] > [Permissions]</string>
    <string name="permission_2">Access is required to save photos and files.</string>
</resources>